# wcag-auditor

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPLETION_STATE.md  GEMINI.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  roadmap.md  run.sh  setup.py
.agents/skills/gitnexus/gitnexus-cli/: SKILL.md
.agents/skills/gitnexus/gitnexus-debugging/: SKILL.md
.agents/skills/gitnexus/gitnexus-exploring/: SKILL.md
.agents/skills/gitnexus/gitnexus-guide/: SKILL.md
.agents/skills/gitnexus/gitnexus-impact-analysis/: SKILL.md
.agents/skills/gitnexus/gitnexus-refactoring/: SKILL.md
.claude/skills/gitnexus/gitnexus-cli/: SKILL.md
docs/: UPDATE-IDEAS.md  coverage.md
docs/architecture/: arch-decisions.md  boundaries.md  execution-context.md  state.md  tech-stack.md
docs/tutorials/: auditor-tutorial.md
tests/: test_auditor.py  test_cli.py  test_client.py  test_operable_rules.py  test_perceivable_rules.py  test_reporter.py  test_robust_rules.py  test_tranche1.py  test_understandable_rules.py  test_user_pass.py
wcag_auditor/: __init__.py  auditor.py  cli.py  remediation.py  reporter.py
wcag_auditor/rules/: __init__.py  core_rules.py  helpers.py  operable_rules.py  perceivable_rules.py  robust_rules.py  understandable_rules.py
wcag_auditor/user_pass/: __init__.py  agents.py  client.py  config.py  runner.py
