[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wcag-auditor"
dynamic = ["version"]
description = "CLI tool to audit websites for WCAG 2.2 compliance"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "playwright>=1.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-playwright>=0.4.0",
    "flake8>=5.0.0",
    "black>=22.0.0",
    "mypy>=0.990"
]

[project.scripts]
wcag-auditor = "wcag_auditor.cli:main"

[project.urls]
Repository = "https://github.com/ryan258/wcag-auditor"

[tool.setuptools.dynamic]
version = {attr = "wcag_auditor.__version__"}
